# dcos

./: .env.example  .gitignore  CONTEXT.md  EPICS.md  LICENSE  README.md  TODO.md  package.json  pnpm-lock.yaml  render.env.example  vercel.json
.github/workflows/: ci.yml  keepalive.yml
apps/api/: Dockerfile  alembic.ini  lint.sh  main.py  pyproject.toml
apps/api/app/: main.py  worker.py
apps/api/app/core/: auth.py  config.py  database.py  dependencies.py  logging.py  middleware.py  notifications.py  permissions.py  storage.py  telemetry.py
apps/api/app/modules/ai/: models.py  router.py  schemas.py  service.py
apps/api/app/modules/analytics/: models.py  router.py  schemas.py  service.py
apps/api/app/modules/chatbot/: router.py  schemas.py  service.py
apps/api/app/modules/citizen/: models.py  router.py  schemas.py  service.py
apps/api/app/modules/contracts/: models.py  router.py  schemas.py  service.py
apps/api/app/modules/identity/: models.py  repository.py  router.py  schemas.py  service.py
apps/api/app/modules/intake/: models.py  repository.py  router.py  schemas.py  service.py  whatsapp.py
apps/api/app/modules/integration/: models.py  router.py  schemas.py  service.py
apps/api/app/modules/platform/: models.py  repository.py  router.py  schemas.py  service.py
apps/api/app/modules/reporting/: models.py  router.py  schemas.py  service.py
apps/api/app/modules/routing/: models.py  router.py  schemas.py  service.py
apps/api/app/modules/sla/: models.py  router.py  schemas.py  service.py
apps/api/app/modules/workforce/: models.py  router.py  schemas.py  service.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial_schema.py  0002_rls_policies.py  0003_ai_tables.py  0004_officer_notes.py  0005_analytics_views.py  0006_ward_names.py  0007_epic2_field_ops.py  0008_epic3_contractor_accountability.py  0009_epic4_predictive.py  0010_rls_remaining_tables.py
apps/api/scripts/: seed.py
apps/api/tests/: test_ai.py  test_analytics_ops.py  test_auth.py  test_health.py  test_intake.py  test_rls.py  test_routing_sla.py  test_workforce.py
apps/web/: eslint.config.mjs  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/scripts/: translate.mjs
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/app/(citizen)/: layout.tsx  page.tsx
apps/web/src/app/(cm)/: layout.tsx
apps/web/src/app/(dept)/: layout.tsx
apps/web/src/components/: GisMap.tsx  providers.tsx  route-guard.tsx
apps/web/src/lib/: api.ts  hooks.ts  i18n.tsx  sla.ts  translations.generated.ts
docs/: blueprint.md
infra/: docker-compose.yml
infra/postgres/: Dockerfile  init.sql
(+58 files in other folders)
